--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,5 @@
     "source.fixAll": true,
     "source.organizeImports": true
   },
-  "cSpell.words": [
-    "commitlint"
-  ]
+  "cSpell.words": ["authme", "commitlint", "Resimex"]
 }
