--- a/package.json
+++ b/package.json
@@ -16,12 +16,17 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.17",
+    "@material-tailwind/react": "^2.0.0",
     "@next/font": "13.1.6",
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
+    "axios": "^1.4.0",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "js-cookie": "^3.0.5",
+    "lottie-react-web": "^2.2.2",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -30,6 +35,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.4.3",
     "@commitlint/config-conventional": "^17.4.3",
+    "@types/js-cookie": "^3.0.3",
     "autoprefixer": "^10.4.13",
     "husky": "^8.0.3",
     "postcss": "^8.4.21",
