--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,5 @@
     "source.fixAll": true,
     "source.organizeImports": true
   },
-  "cSpell.words": ["authme", "commitlint", "Resimex"]
+  "cSpell.words": ["authme", "commitlint", "nunito", "Resimex"]
 }
