feat: adding middleware to protect routes

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.4.0",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "jose": "^4.14.4",
     "js-cookie": "^3.0.5",
     "lottie-react-web": "^2.2.2",
     "next": "13.1.6",
