--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.17",
+    "@hookform/error-message": "^2.0.1",
     "@material-tailwind/react": "^2.0.0",
     "@next/font": "13.1.6",
     "@types/node": "18.13.0",
