--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "sweetalert2": "^11.7.5",
+    "sweetalert2-react-content": "^5.0.7",
     "typescript": "4.9.5"
   },
   "devDependencies": {
